adding project completed

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,30 +1,89 @@
 <div class="home__container">
 	<app-card
-		gameCover="assets/bt-1.jpg"
+		gameCover="assets/gtaV.png"
 		gameLabel="DIGITAL"
-		gameType="DIGITAL | PS4"
-		gamePrice="R$ 129,99"
+		gameType="PS4™ e PS5™"
+		gamePrice="R$98,96"
 	>
 	</app-card>
 	<app-card
-		gameCover="assets/bt-4.jpg"
-		gameLabel="EXCLUSIVE"
-		gameType="DISC | PS5"
-		gamePrice="R$ 269,99"
+		gameCover="assets/eafc.jpg"
+		gameLabel="EDIÇÃO STANDARD"
+		gameType="PS4 e PS5"
+		gamePrice="R$358,90"
 	>
 	</app-card>
 	<app-card
-		gameCover="assets/ac-cover.jpg"
-		gameLabel="BEST OF YEAR"
-		gameType="DIGITAL | PS5"
-		gamePrice="R$ 369,99"
+		gameCover="assets/red.jpg"
+		gameLabel="EDIÇÃO PADRÃO"
+		gameType="PS4"
+		gamePrice="R$248,90"
 		>
 	</app-card>
 	<app-card
-		gameCover="assets/bt-hardline.jpg"
-		gameLabel="NEW"
-		gameType="DIGITAL | PS3 PS4 PS5"
-		gamePrice="R$ 369,99"
+		gameCover="assets/homemaranha.jpg"
+		gameLabel="Digital Deluxe"
+		gameType="PS5"
+		gamePrice="R$399,50"
+	>
+	</app-card>
+	<app-card
+		gameCover="assets/mirage.jpg"
+		gameLabel="STANDARD EDITION"
+		gameType="PS4 PS5"
+		gamePrice="R$239,90"
+	>
+	</app-card>
+	<app-card
+		gameCover="assets/nhl.jpg"
+		gameLabel="X-FACTOR EDITION"
+		gameType="PS4 PS5"
+		gamePrice="
+		R$528,90"
+	>
+	</app-card>
+	<app-card
+		gameCover="assets/mw3.jpg"
+		gameLabel="MWIII MULTIGERAÇÃO"
+		gameType="PS4 PS5"
+		gamePrice="R$299,00"
+	>
+	</app-card>
+	<app-card
+		gameCover="assets/horizon.jpg"
+		gameLabel="EDIÇÃO COMPLETA"
+		gameType="PS4 PS5"
+		gamePrice="R$299,90"
+	>
+	</app-card>
+	<app-card
+		gameCover="assets/mk1.jpg"
+		gameLabel="EDIÇÃO STANDARD
+		"
+		gameType="PS4 PS5"
+		gamePrice="R$299,90"
+	>
+	</app-card>
+	<app-card
+		gameCover="assets/lp.jpg"
+		gameLabel="STANDARD EDITION"
+		gameType="PS4 PS5"
+		gamePrice="R$299,90"
+	>
+	</app-card>
+	<app-card
+		gameCover="assets/thm.jpg"
+		gameLabel="PACOTE CROSS-GEN
+		"
+		gameType="PS4 PS5"
+		gamePrice="R$329,90"
+	>
+	</app-card>
+	<app-card
+		gameCover="assets/pd3.jpg"
+		gameLabel="PLAION"
+		gameType="PS4 PS5"
+		gamePrice="R$220,00"
 	>
 	</app-card>
 </div>
