--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -10,9 +10,9 @@
 	</div>
 	<div class="menu-bar__item">
 		<ul>
-			<li><a href="#">YOUTUBE</a></li>
-			<li><a href="#">LINKEDIN</a></li>
-			<li><a href="#">GITHUB</a></li>
+			<li><a href="https://www.linkedin.com/in/gustavokehr/" target="_blank">LINKEDIN</a></li>
+			<li><a href="https://github.com/GustavoKehr" target="_blank">GITHUB</a></li>
+			<li><a href="https://instagram.com/gustavokehr_" target="_blank">INSTAGRAM</a></li>
 		</ul>
 	</div>
 </div>
